--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Overpass", sans-serif;
+    -webkit-font-smoothibg: antialiased;
 }
 
 :root{
@@ -12,7 +13,7 @@
     --orange: #FC7614;
     --white: #FFF;
     --very-dark-blue: #131518;
-    --black-gradient: #radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0% #181E27 100%);
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0% #181E27 100%);
 }
 
 body{
@@ -32,15 +33,25 @@ body{
 
 .card h1{
 color: var(--white);
+font-size: 28px;
+margin-bottom: 15px;
 }
 
 
 .card p{
     color: var(--light-grey);
+    font-size: 15px;
+    line-height: 24px;
+
 }
 
 .estrela{
     background-color: var(--dark-blue);
     width: 48px;
     height: 48px;
+
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    margin-bottom: 30px;
 }
