--- a/style.css
+++ b/style.css
@@ -55,3 +55,25 @@ margin-bottom: 15px;
     border-radius: 50%;
     margin-bottom: 30px;
 }
+
+.botoes{
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes button{
+width: 51px;
+height: 51px;
+font-size: 16px;
+font-weight: 700;
+line-height: 24px;
+border-radius: 50%;
+border: none;
+color: var(--medium-grey);
+background-color: var(--dark-blue);
+
+}
+
+.botoes button:hover{
+    
+}
