sexto commit do CSS

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ margin-bottom: 15px;
     line-height: 24px;
 
 }
-
 .estrela{
     background-color: var(--dark-blue);
     width: 48px;
@@ -56,9 +55,12 @@ margin-bottom: 15px;
     margin-bottom: 30px;
 }
 
+
+
 .botoes{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 
 .botoes button{
@@ -71,9 +73,37 @@ border-radius: 50%;
 border: none;
 color: var(--medium-grey);
 background-color: var(--dark-blue);
+transition: all ease-in-out 0.3s;
 
 }
 
 .botoes button:hover{
-    
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
 }
+
+.botoes button:focus{
+    color: var(--white);
+    background-color: var(--light-grey);
+}
+
+    .card > button{
+       width: 100%;
+       padding: 13px;
+       background-color: var(--orange);
+       border: none;
+       border-radius: 22px;
+
+       font-size: 15px;
+       font-weight: 700;
+       text-transform: uppercase;
+       letter-spacing: 2px;
+       color: var(--white);
+    }
+
+    .card > button:hover{
+        color: var(--orange);
+        background-color: var(--white);
+        cursor: pointer;
+    }
