quinto commit do HTML e setimo do CSS

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ transition: all ease-in-out 0.3s;
     background-color: var(--light-grey);
 }
 
-    .card > button{
+    .card > a {
+       display: block;
        width: 100%;
        padding: 13px;
        background-color: var(--orange);
@@ -100,9 +101,11 @@ transition: all ease-in-out 0.3s;
        text-transform: uppercase;
        letter-spacing: 2px;
        color: var(--white);
+       text-align: center;
+       text-decoration: none;
     }
 
-    .card > button:hover{
+    .card > a:hover{
         color: var(--orange);
         background-color: var(--white);
         cursor: pointer;
