--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ margin-bottom: 15px;
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
-
+    margin-bottom: 24px;
 }
 .estrela{
     background-color: var(--dark-blue);
